@@ -3,6 +3,7 @@ ovirt-host-deploy -- oVirt host deploy
 ????-??-?? - Version 1.2.2
 
  * vdsm: fix dmidecode output parsing, rhbz#1109342.
+ * vdsmhooks: fix package installation.
 
 2014-05-02 - Version 1.2.1
 
